--- a/SafeSpace/Pages/LoginPage.xaml
+++ b/SafeSpace/Pages/LoginPage.xaml
@@ -7,13 +7,22 @@
     <VerticalStackLayout
             Padding="20"
             Spacing="20">
-
-        <Label Text="Log in"></Label>
+		<Label Text="Welcome to SafeSpace" HorizontalOptions="Center" Margin="0,0,0,10"></Label>
+        <Label Text="Log in" HorizontalOptions ="Center"></Label>
 
 
         <Entry Text="{Binding UserName}" Placeholder="Email"></Entry>
         <Entry Text="{Binding Password}" Placeholder="Password" IsPassword="true"></Entry>
 		<Label Text="{Binding Message}" TextColor="{Binding MessageColor}" FontSize="16" HorizontalOptions="Center"/>
+		<Label Text="Dont have an account? Register"
+       TextColor="Blue"
+       HorizontalOptions="Center"
+       VerticalOptions="Center">
+			<Label.GestureRecognizers>
+				<TapGestureRecognizer
+					Command="{Binding NavigateToAboutCommand}" />
+			</Label.GestureRecognizers>
+		</Label>
         <Button Text="Log in" FontSize="25" Command="{Binding LoginCommmand}">
 
 	
