--- a/SafeSpace/App.xaml
+++ b/SafeSpace/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:SafeSpace"
+             xmlns:local="clr-namespace:SafeSpace.Pages"
              x:Class="SafeSpace.App">
     <Application.Resources>
         <ResourceDictionary>
