--- a/SafeSpace/Pages/RegisterPage.xaml
+++ b/SafeSpace/Pages/RegisterPage.xaml
@@ -12,19 +12,13 @@
         <Label Text="Register" HorizontalOptions ="Center"></Label>
 
 
-        <Entry Text="{Binding UserName}" Placeholder="Email"></Entry>
-        <Entry Text="{Binding Password}" Placeholder="Password" IsPassword="true"></Entry>
+        <Entry Text="{Binding UserName}" Placeholder="Introduce a username"></Entry>
+		<Entry Text="{Binding Email}" Placeholder="Introduce a valid email"></Entry>
+        <Entry Text="{Binding Password}" Placeholder="Introduce a secure password" IsPassword="true"></Entry>
+	
         <Label Text="{Binding Message}" TextColor="{Binding MessageColor}" FontSize="16" HorizontalOptions="Center"/>
-        <Label Text="Dont have an account? Register"
-       TextColor="Blue"
-       HorizontalOptions="Center"
-       VerticalOptions="Center">
-            <Label.GestureRecognizers>
-                <TapGestureRecognizer
-					Command="{Binding NavigateToAboutCommand}" />
-            </Label.GestureRecognizers>
-        </Label>
-        <Button Text="Register" FontSize="25" Command="{Binding LoginCommand}">
+        
+        <Button Text="Register" FontSize="25" Command="{Binding RegisterCommand}">
 
 
         </Button>
