--- a/SafeSpace/AppShell.xaml
+++ b/SafeSpace/AppShell.xaml
@@ -11,12 +11,15 @@
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate pages:MainPage}"
+        Route="MainPage"/>
 
     <ShellContent
         Route="RegisterPage"
         ContentTemplate="{DataTemplate pages:RegisterPage}" />
-
+    
+    <ShellContent
+    Route="LoginPage"
+    ContentTemplate="{DataTemplate pages:LoginPage}" />
 
 </Shell>
