Lot of things added, home page and started with profile and stuff

--- a/SafeSpace/AppShell.xaml
+++ b/SafeSpace/AppShell.xaml
@@ -22,4 +22,8 @@
     Route="LoginPage"
     ContentTemplate="{DataTemplate pages:LoginPage}" />
 
+    <ShellContent
+    Route="HomePage"
+    ContentTemplate="{DataTemplate pages:HomePage}" />
+
 </Shell>
