update profile needs some more work, backend works tho

--- a/SafeSpace/AppShell.xaml
+++ b/SafeSpace/AppShell.xaml
@@ -26,4 +26,8 @@
     Route="HomePage"
     ContentTemplate="{DataTemplate pages:HomePage}" />
 
+    <ShellContent
+    Route="ShowProfilePage"
+    ContentTemplate="{DataTemplate pages:ShowProfilePage}" />
+
 </Shell>
