--- a/SafeSpace/Pages/LoginPage.xaml
+++ b/SafeSpace/Pages/LoginPage.xaml
@@ -1,31 +1,42 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BackgroundColor="LightGray"
              x:Class="SafeSpace.Pages.LoginPage">
 			
 
 
     <VerticalStackLayout
             Padding="20"
-            Spacing="20">
-		<Label Text="Welcome to SafeSpace" HorizontalOptions="Center" Margin="0,0,0,10"></Label>
-        <Label Text="Log in" HorizontalOptions ="Center"></Label>
+            Spacing="20"
+            Margin="0,60,0,0"
+        >
+        <Label FontSize ="30" HorizontalOptions="Center">
+            <Label.FormattedText>
+                <FormattedString>
+                    <Span Text="Safe" TextColor="Blue" FontFamily="Quicksand"></Span>
+                    <Span Text = "Space" TextColor="Green" FontFamily="Quicksand"></Span>
+                </FormattedString>
+            </Label.FormattedText>
+        </Label>
 
 
-        <Entry Text="{Binding UserName}" Placeholder="Username"></Entry>
-        <Entry Text="{Binding Password}" Placeholder="Password" IsPassword="true"></Entry>
+        <Entry Text="{Binding UserName}"  Placeholder="Username" FontSize ="20" PlaceholderColor="Black" TextColor="Black"></Entry>
+        <Entry Text="{Binding Password}"  Placeholder="Password" FontSize="20" IsPassword="true" PlaceholderColor="Black" TextColor="Black"></Entry>
 		<Label Text="{Binding Message}" TextColor="{Binding MessageColor}" FontSize="16" HorizontalOptions="Center"/>
         <Label Text="Don't have an account? Register"
        TextColor="Blue"
        FontAttributes="Bold"
+       FontSize="16"
        TextDecorations="Underline"
        HorizontalOptions="Center"
+       FontFamily="Quicksand"
        VerticalOptions="Center">
             <Label.GestureRecognizers>
                 <TapGestureRecognizer Command="{Binding NavigateToAboutCommand}" />
             </Label.GestureRecognizers>
         </Label>
-        <Button Text="Log in" FontSize="25" Command="{Binding LoginCommand}" Clicked="OnLoadClicked">
+        <Button Text="Log in" FontSize="25" Command="{Binding LoginCommand}" BackgroundColor="Green" Clicked="OnLoadClicked" FontFamily="Quicksand">
 
 
         </Button>
