--- a/SafeSpace/Pages/HomePage.xaml
+++ b/SafeSpace/Pages/HomePage.xaml
@@ -17,7 +17,8 @@
         <Image Source="user.png" WidthRequest="150" HeightRequest="150"></Image>
         <Label Text="{Binding WelcomeMessage}" HorizontalOptions="Center" FontSize="25"></Label>
         <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" WidthRequest="300" Text="Profile Configuration" Command="{Binding NavigateToProfile}"></Button>
-        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Chats and Meetups" WidthRequest="300" Command="{Binding NavigateToChats}"></Button>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Chats" WidthRequest="300" Command="{Binding NavigateToChats}"></Button>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Meetups" WidthRequest="300" Command="{Binding NavigateToMeetups}"></Button>
         <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Contact help" WidthRequest="300" Command="{Binding NavigateToHelp}"></Button>
 
 
