--- a/SafeSpace/Pages/ChatPage.xaml
+++ b/SafeSpace/Pages/ChatPage.xaml
@@ -1,46 +1,82 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:SafeSpace.Converters"
              x:Class="SafeSpace.Pages.ChatPage"
              Title="Messages"
              BackgroundColor="LightGray">
 
-    <Grid RowDefinitions="*,Auto" Padding="10">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <!-- Make sure these converters are defined in your project -->
+            <converters:BoolToColorConverter x:Key="BoolToColorConverter"/>
+            <converters:BoolToAlignmentConverter x:Key="BoolToAlignmentConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
+    <Grid RowDefinitions="Auto,*,Auto" Padding="10">
+        <Label Text="{Binding ChatroomName}"
+       FontSize="20"
+       FontAttributes="Bold"
+       TextColor="Black"
+       HorizontalOptions="Center"
+       Margin="0,10,0,5"
+       Grid.Row="0" />
         <!-- Message List -->
-        <CollectionView x:Name="MessagesList" 
-                        ItemsSource="{Binding Messages}" 
+        <CollectionView x:Name="MessagesList"
+                        ItemsSource="{Binding Messages}"
                         Margin="0,10"
+                        Grid.Row="1"
                         VerticalOptions="FillAndExpand"
                         SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
-                    <Frame Padding="10" Margin="5"
+                    <Frame Padding="10"
+                           Margin="5,30, 30, 30"
+                           
                            BackgroundColor="{Binding IsIncoming, Converter={StaticResource BoolToColorConverter}}"
-                           CornerRadius="15" 
+                           CornerRadius="15"
+                           HasShadow="True"
                            HorizontalOptions="{Binding IsIncoming, Converter={StaticResource BoolToAlignmentConverter}}">
-                        <Label Text="{Binding Text}" 
-                               TextColor="Black" 
-                               FontSize="16" 
-                               LineBreakMode="WordWrap" />
+                        <VerticalStackLayout Spacing="2">
+                            <Label Text="{Binding SenderName}"
+                       FontSize="12"
+                       FontAttributes="Bold"
+                       TextColor="Black"
+                       Opacity="0.7" />
+                            <Label Text="{Binding Content}"
+                       TextColor="Black"
+                       FontSize="16"
+                       LineBreakMode="WordWrap" />
+                        </VerticalStackLayout>
                     </Frame>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
         </CollectionView>
 
         <!-- Message Input Area -->
-        <Grid Grid.Row="1" ColumnDefinitions="*,Auto" Padding="5" BackgroundColor="LightGray" >
+        <Grid Grid.Row="2" ColumnDefinitions="*,Auto"
+              Padding="5"
+              BackgroundColor="White"
+              HeightRequest="60">
             <Entry x:Name="MessageEntry"
                    Placeholder="Type a message..."
                    FontSize="16"
                    Margin="5"
-                   BackgroundColor="White"/>
+                   VerticalOptions="Center"
+                   BackgroundColor="#F5F5F5"
+                   TextColor="Black"
+                   Text="{Binding Content, Mode=TwoWay}"/>
+            
             <Button Text="Send"
                     BackgroundColor="Green"
                     TextColor="White"
                     Margin="5"
+                    VerticalOptions="Center"
+                    Command="{Binding SendMessageCommand}"
+                    Grid.Column="1"
                     
-                    Grid.Column="1"/>
+                    />
         </Grid>
 
     </Grid>
