Profesionales aparecen a través del backend

--- a/SafeSpace/AppShell.xaml
+++ b/SafeSpace/AppShell.xaml
@@ -37,4 +37,8 @@
     <ShellContent
     Route="ShowChatsPage"
     ContentTemplate="{DataTemplate pages:ShowChatsPage}" />
+    
+    <Shell.BackButtonBehavior>
+        <BackButtonBehavior IsEnabled="True" />
+    </Shell.BackButtonBehavior>
 </Shell>
