--- a/SafeSpace/Pages/HomePage.xaml
+++ b/SafeSpace/Pages/HomePage.xaml
@@ -11,18 +11,18 @@
             
             HorizontalOptions="Center"
             VerticalOptions="Center"
-
+           
             Padding="10,0"
             Spacing="40">
         <Image Source="user.png" WidthRequest="150" HeightRequest="150"></Image>
-        <Label Text="{Binding WelcomeMessage}" HorizontalOptions="Center" FontSize="25"></Label>
-        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" WidthRequest="300" Text="Profile Configuration" Command="{Binding NavigateToProfile}"></Button>
-        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Chats" WidthRequest="300" Command="{Binding NavigateToChats}"></Button>
-        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Meetups" WidthRequest="300" Command="{Binding NavigateToMeetups}"></Button>
-        <Button BackgroundColor="Green" FontFamily="Quicksand"  FontSize="25" Text="Contact help" WidthRequest="300" Command="{Binding NavigateToHelp}"></Button>
+        <Label Text="{Binding WelcomeMessage}" TextColor="Black" HorizontalOptions="Center" FontSize="25"></Label>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  TextColor="LightGray" FontSize="25" WidthRequest="300" Text="Profile Configuration" Command="{Binding NavigateToProfile}"></Button>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  TextColor="LightGray" FontSize="25" Text="Chats" WidthRequest="300" Command="{Binding NavigateToChats}"></Button>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  TextColor="LightGray" FontSize="25" Text="Meetups" WidthRequest="300" Command="{Binding NavigateToMeetups}"></Button>
+        <Button BackgroundColor="Green" FontFamily="Quicksand"  TextColor="LightGray" FontSize="25" Text="Contact help" WidthRequest="300" Command="{Binding NavigateToHelp}"></Button>
 
 
-        <Button VerticalOptions="End" Text="LogOut" Command="{Binding LogOut}" WidthRequest="80" BackgroundColor="Green"></Button>
+        <Button VerticalOptions="End" Text="LogOut" Command="{Binding LogOut}" TextColor="LightGray" WidthRequest="80" BackgroundColor="Green"></Button>
 
     </VerticalStackLayout>
 	
