--- a/SafeSpace/Pages/ChatPage.xaml
+++ b/SafeSpace/Pages/ChatPage.xaml
@@ -3,42 +3,39 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:SafeSpace.Converters"
              x:Class="SafeSpace.Pages.ChatPage"
-             Title="Messages"
-             BackgroundColor="LightGray">
+             BackgroundColor="LightGray"
+             >
+    
 
     <ContentPage.Resources>
         <ResourceDictionary>
-            <!-- Make sure these converters are defined in your project -->
             <converters:BoolToColorConverter x:Key="BoolToColorConverter"/>
             <converters:BoolToAlignmentConverter x:Key="BoolToAlignmentConverter"/>
         </ResourceDictionary>
     </ContentPage.Resources>
-
+  
     <Grid RowDefinitions="Auto,*,Auto" Padding="10">
-        <Label Text="{Binding ChatroomName}"
-       FontSize="20"
-       FontAttributes="Bold"
-       TextColor="Black"
-       HorizontalOptions="Center"
-       Margin="0,10,0,5"
-       Grid.Row="0" />
-        <!-- Message List -->
+        <Label Grid.Row="0" Text="{Binding ChatroomName}" TextColor="White"></Label>
+       
         <CollectionView x:Name="MessagesList"
                         ItemsSource="{Binding Messages}"
-                        Margin="0,10"
+                        Margin="10"
                         Grid.Row="1"
                         VerticalOptions="FillAndExpand"
                         SelectionMode="None">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Frame Padding="10"
-                           Margin="5,30, 30, 30"
+                           Margin="10,40"
                            
+                            BorderColor="White"
                            BackgroundColor="{Binding IsIncoming, Converter={StaticResource BoolToColorConverter}}"
                            CornerRadius="15"
                            HasShadow="True"
-                           HorizontalOptions="{Binding IsIncoming, Converter={StaticResource BoolToAlignmentConverter}}">
-                        <VerticalStackLayout Spacing="2">
+                           
+                           HorizontalOptions="{Binding IsIncoming, Converter={StaticResource BoolToAlignmentConverter}}"
+                           MaximumWidthRequest="280">
+                        <VerticalStackLayout Spacing="2" >
                             <Label Text="{Binding SenderName}"
                        FontSize="12"
                        FontAttributes="Bold"
@@ -48,6 +45,7 @@
                        TextColor="Black"
                        FontSize="16"
                        LineBreakMode="WordWrap" />
+                           
                         </VerticalStackLayout>
                     </Frame>
                 </DataTemplate>
