--- a/SafeSpace/Pages/RegisterPage.xaml
+++ b/SafeSpace/Pages/RegisterPage.xaml
@@ -20,9 +20,9 @@
         </Label>
 
 
-        <Entry Text="{Binding UserName}" FontSize="20" PlaceholderColor="Black" Placeholder="Introduce a username"></Entry>
-		<Entry Text="{Binding Email}" FontSize="20" PlaceholderColor="Black" Placeholder="Introduce a valid email"></Entry>
-        <Entry Text="{Binding Password}" FontSize="20" PlaceholderColor="Black" Placeholder="Introduce a secure password" IsPassword="true"></Entry>
+        <Entry Text="{Binding UserName}" FontSize="20" FontFamily="Quicksand" BackgroundColor="Gray" PlaceholderColor="Black" Placeholder="Introduce a username"></Entry>
+		<Entry Text="{Binding Email}" FontSize="20" FontFamily="Quicksand" BackgroundColor="Gray" PlaceholderColor="Black" Placeholder="Introduce a valid email"></Entry>
+        <Entry Text="{Binding Password}" FontSize="20" FontFamily="Quicksand" BackgroundColor="Gray" PlaceholderColor="Black" Placeholder="Introduce a secure password" IsPassword="true"></Entry>
 	
         <Label Text="{Binding Message}" TextColor="{Binding MessageColor}" FontSize="16" HorizontalOptions="Center"/>
         
